# dataguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: quickstart.ipynb
examples/files/: medisch_verslag.docx  medisch_verslag.txt
src/careons_deid/: __init__.py
src/careons_deid/anonymization/: fake_data.py  strategies.py
src/careons_deid/core/: __init__.py  analyzer.py  base_recognizer.py  base_spacy.py  guard.py  types.py
src/careons_deid/guard_engine/: context_awareness.py  guard_analyzer.py  guard_engine.py  overlap_resolver.py
src/careons_deid/patterns/: dutch_patterns.py
src/careons_deid/processors/: __init__.py  doc_processor.py  text_processor.py
src/careons_deid/recognizers/: __init__.py  _helpers.py  contact.py  financial.py  geo.py  identity.py  medical.py  network.py  spacy_recognizer.py  temporal.py
src/dataguard/: __init__.py  masker.py
src/dataguard_deid/: __init__.py  types.py
src/dataguard_deid/analysis/: analyzer.py  context_awareness.py  overlap_resolver.py
src/dataguard_deid/anonymization/: engine.py  fake_data.py  strategies.py
src/dataguard_deid/config/: entities.py  labels.py  scoring.py
src/dataguard_deid/core/: __init__.py  analyzer.py  base_recognizer.py  base_spacy.py  guard.py  types.py
src/dataguard_deid/guard_engine/: context_awareness.py  guard_analyzer.py  guard_engine.py  overlap_resolver.py
src/dataguard_deid/patterns/: dutch_keywords.py  dutch_patterns.py
src/dataguard_deid/processors/: __init__.py  doc_processor.py  text_processor.py
src/dataguard_deid/recognizers/: __init__.py  _helpers.py  _utils.py  base.py  contact.py  datetime.py  device.py  financial.py  geo.py  identifier.py  identity.py  location.py  medical.py  network.py  spacy_recognizer.py  temporal.py  vehicle.py
tests/: test.py  test_dataguard.py
