[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-dataguard"
dynamic = ["version"]
description = "Simple regex-based sensitive data masking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["masking", "redaction", "pii", "privacy", "regex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mysoly/dataguard"
Repository = "https://github.com/mysoly/dataguard"
Issues = "https://github.com/mysoly/dataguard/issues"

[tool.hatch.version]
path = "src/dataguard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dataguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
