[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataguard-deid"
version = "1.0.0"
description = "Careons DeID: PII detection, masking & anonymization for Dutch health tech."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mysoly", email = "info@mysoly.nl" },
]
keywords = ["pii", "privacy", "nlp", "dutch", "healthcare", "anonymization", "spacy"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "spacy>=3.7.0,<4.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
transformers = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mysoly/dataguard"
Documentation = "https://github.com/mysoly/dataguard#readme"
Repository = "https://github.com/mysoly/dataguard"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"careons_deid" = ["py.typed"]
