[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataguard-deid"
dynamic = ["version"]
description = "DataGuard DeID: PII detection, masking & anonymization for Dutch health tech."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mysoly", email = "info@mysoly.nl" },
]
keywords = ["pii", "privacy", "nlp", "dutch", "healthcare", "anonymization", "spacy"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "spacy>=3.7.0,<4.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mysoly/dataguard"
Documentation = "https://github.com/mysoly/dataguard#readme"
Repository = "https://github.com/mysoly/dataguard"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dataguard_deid.__version__"}

[tool.setuptools.package-data]
"dataguard_deid" = ["py.typed"]
